feat: run independent desktops per display with unified Start
Scope workspace lifecycle, task observation and cleanup to each display while sharing HOME ownership until the final Desktop closes.

Unify Start across launcher, desktop and standalone surfaces with a destination selector and profile-aware application launches. Update MCP operations and APK cleanup for multiple workspaces.

Preserve taskbar overflow menus during snapshot refreshes and simplify the responsive phone control panel with display-scoped output controls.